--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "instascan": "^1.0.0",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.2",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
